sun/tools/jmap/BasicJMapTest.java Mutex rank failures

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 18
    • Affects Version/s: 18
    • Component/s: hotspot
    • b18
    • Verified

      The test sun/tools/jmap/BasicJMapTest.java fails with Mutex rank violations due to the changes for JDK-8273915.

      # Internal Error (/scratch/cphillim/hg/18test/src/hotspot/share/runtime/mutex.cpp:291), pid=14632, tid=14677
      # assert(_rank <= nosafepoint || _safepoint_check_required == _safepoint_check_always) failed: Locks above nosafepoint rank should safepoint: Dumper Controller lock
      #

      When the ranks are fixed, the test also gets:

      # Internal Error (/scratch/cphillim/hg/18test/src/hotspot/share/runtime/mutex.cpp:390), pid=33218, tid=33341
      # assert(false) failed: Attempting to wait on monitor HProfCompressionBackend_lock/20 while holding lock ParallelHProfWriter_lock/21 -- possible deadlock. Should not block(wait) while holding a lock of rank nosafepoint or below.
      #

      Because of some old check in the mutex rank checking where it assumed special was the least ranked lock.

            Assignee:
            Lin Zang
            Reporter:
            Coleen Phillimore
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: