src/hotspot/share/services/heapDumperCompression.cpp
@@ -200,7 +200,7 @@ CompressionBackend::CompressionBackend(AbstractWriter* writer,
   _written(0),
   _writer(writer),
   _compressor(compressor),
-  _lock(new (std::nothrow) PaddedMonitor(Mutex::nosafepoint, "HProfCompressionBackend_lock",
+  _lock(new (std::nothrow) PaddedMonitor(Mutex::nosafepoint-1, "HProfCompressionBackend_lock",
     Mutex::_safepoint_check_never)) {
   if (_writer == NULL) {
     set_error("Could not allocate writer");
